--- a/util/wine/wine.ini
+++ b/util/wine/wine.ini
@@ -1,3 +1,4 @@
+
 [drives]
 A=/flop0
 B=/dummy
@@ -6,24 +7,16 @@ C=/dos
 [wine]
 Windows=c:\windows
 System=c:\windows\system
-Temp=c:\tmp
+Temp=c:\temp
 Path=c:\windows;c:\windows\system
 SystemResources=./sysres.dll
-; SystemResources=
 
 [serialports]
 Com1=/dev/sio00
+Com4=/dev/sio01
 
 [parallelports]
-Lpt1=/dev/lpt0
+Lpt1=/dev/lpa0
 
 [spy]
-;;;;; Uncomment the following line to activate spying to the console ;;;;;
-;File=CON
-
-;;;;; Uncomment the following line to activate spying to the spy.log ;;;;;
-;File=spy.log
-
-;;;;; The following options are not supported yet                    ;;;;;
-;Include=
-;Exclude=
+Exclude=WM_TIMER;WM_SETCURSOR;WM_MOUSEMOVE;WM_NCHITTEST;WM_NCACTIVATE;WM_GETDLGCODE;
